--- a/newsletter.html
+++ b/newsletter.html
@@ -1,10 +1,37 @@
 <p>
-    "¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y cuarto al cuidado de tu piel? Es
+    ¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y cuarto al cuidado de tu piel? Es
     más, ¿Qué te parece reservar un tiempo para mimarte a ti misma? Sabemos que día a día te ganas de sobra poder darte
     un capricho de vez en cuando cuidando de ti y de tu piel, ahora es el momento. Llega la promo de Enero:
     <strong>Higiene facial de Carita</strong>.
-</p><p>
-    <a href="https://www.carita.es/" target="_blank">Carita</a> es sinónimo de resultados, de grandes momentos de
+</p>
+</p></td></tr>
+<!-- BULLETPROOF BUTTON -->
+<tr>
+    <td bgcolor="#ffffff" align="left">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
+                    <table border="0" cellspacing="0" cellpadding="0">
+                        <tr>
+                            <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-10" target="_blank"
+                                   style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                    text-decoration: none; text-decoration: none; padding: 15px 25px;
+                                    border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
+                                    COMPRA AHORA
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </td>
+</tr>
+<tr><td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;" ><p style="margin: 0; text-align: justify">
+
+    <p>
+    <a href="https://www.carita.es/" style="color: #56ab2a" target="_blank">Carita</a> es sinónimo de resultados, de grandes momentos de
     cuidado de la piel. Déjate seducir por una firma cosmética
     de lujo y gran calidad.
 </p>
