fix booking timezone offset

--- a/promo.html
+++ b/promo.html
@@ -1,33 +1,14 @@
 <p>
-    "¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y cuarto al cuidado de tu piel? Es
-    más, ¿Qué te parece reservar un tiempo para mimarte a ti misma? Sabemos que día a día te ganas de sobra poder darte
-    un capricho de vez en cuando cuidando de ti y de tu piel, ahora es el momento. Llega la promo de Enero:
-    <strong>Higiene facial de Carita</strong>.
+    ¿Quién no queria tener un rostro mas suave, luminoso y fresco?
+</p><h4>
+    ¡Ven y prueba la “micro”!
+</h4><p>
+    Es un tratamiento que exfolia la capa superficial de la piel, retirando las particulas
+    de suciedad y las células muertas que se van acumulando sobre ella. Elimina todas las impurezas, tanto de origen
+    ambiental como las producidas por el propio organismo, quedando la piel mas limpia, luminosa y transparente.
+    Contribuye así a una correcta oxigenacion de la piel y favorece la renovacion celular, ademas lleva un masaje
+    facial o corporal de quince minutos, ¿a quéesperas para reservar túcita?
 </p><p>
-    <a href="https://www.carita.es/" target="_blank">Carita</a> es sinónimo de resultados, de grandes momentos de
-    cuidado de la piel. Déjate seducir por una firma cosmética
-    de lujo y gran calidad.
-</p>
-<h4>Limpia y renueva en profundidad: Carita</h4>
-<p>
-    Si aún no conoces este tratamiento y quieres más información te contamos un poquito en qué consiste, toma nota y no
-    te olvides de compartir con todos tus amigos y amigas de la provincia de Málaga para que puedan enterarse de esta
-    promoción de Carita en nuestros centros de Málaga y puedan al igual que tu disfrutar de esta sesión de mimos con un
-    descuento de 15€.
-</p><p>
-    Durante el mes de Enero puedes reservar tu sesión desde 40€ en vez de por 55€. ¿Te lo vas a perder?
-    El tratamiento comienza con un desmaquillado completo, después aplicamos el mítico renovateur. Aquí no queda todo,
-    después se realiza un peeling de ultrasonidos, por supuesto después aplicamos vapor para facilitar la posterior
-    extracción y limpieza de poros. Para terminar, aplicamos una mascarilla específica.
-</p><p>
-    El peeling de ultrasonidos es sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce
-    la visibilidad de las arrugas más leves, las cicatrices producidas por el acné, ayuda a eliminar puntos negros y en
-    la limpieza de los poros.
-</p>
-
-<h4>Centro para limpieza facial en Málaga</h4>
-<p>
-    ¿Buscas un centro para limpieza facial en Málaga de reconocido prestigio y buenos precios? Todo lo que buscas y
-    mucho más lo puedes encontrar en cualquiera de los dos centros. Pide ya tu cita por teléfono o online y no pierdas
-    esta gran oportunidad."
+    Aún hay mas... todo este mes de Marzo tenéis un <strong>20% en toda la cosmetica Decleor</strong> ¡Te lo vas a perder! Os
+    esperamos en nuestros centros In & Out de Calle Salitre 11 o Puerta de Buenaventura 4
 </p>
