--- a/newsletter.html
+++ b/newsletter.html
@@ -1,9 +1,8 @@
 <p>
-    ¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y cuarto al cuidado de tu piel? Es
-    más, ¿Qué te parece reservar un tiempo para mimarte a ti misma? Sabemos que día a día te ganas de sobra poder darte
-    un capricho de vez en cuando cuidando de ti y de tu piel, ahora es el momento. Llega la promo de Enero:
-    <strong>Higiene facial de Carita</strong>.
-</p>
+    ¿Quién no queria tener un rostro mas suave, luminoso y fresco?
+</p><h4>
+    ¡Ven y prueba la “micro”!
+</h4>
 </p></td></tr>
 <!-- BULLETPROOF BUTTON -->
 <tr>
@@ -14,7 +13,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-10" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-89|TRT-9" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
@@ -28,33 +27,22 @@
         </table>
     </td>
 </tr>
-<tr><td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;" ><p style="margin: 0; text-align: justify">
-
-    <p>
-    <a href="https://www.carita.es/" style="color: #56ab2a" target="_blank">Carita</a> es sinónimo de resultados, de grandes momentos de
-    cuidado de la piel. Déjate seducir por una firma cosmética
-    de lujo y gran calidad.
-</p>
-<h4>Limpia y renueva en profundidad: Carita</h4>
-<p>
-    Si aún no conoces este tratamiento y quieres más información te contamos un poquito en qué consiste, toma nota y no
-    te olvides de compartir con todos tus amigos y amigas de la provincia de Málaga para que puedan enterarse de esta
-    promoción de Carita en nuestros centros de Málaga y puedan al igual que tu disfrutar de esta sesión de mimos con un
-    descuento de 15€.
-</p><p>
-    Durante el mes de Enero puedes reservar tu sesión desde 40€ en vez de por 55€. ¿Te lo vas a perder?
-    El tratamiento comienza con un desmaquillado completo, después aplicamos el mítico renovateur. Aquí no queda todo,
-    después se realiza un peeling de ultrasonidos, por supuesto después aplicamos vapor para facilitar la posterior
-    extracción y limpieza de poros. Para terminar, aplicamos una mascarilla específica.
-</p><p>
-    El peeling de ultrasonidos es sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce
-    la visibilidad de las arrugas más leves, las cicatrices producidas por el acné, ayuda a eliminar puntos negros y en
-    la limpieza de los poros.
-</p>
-
-<h4>Centro para limpieza facial en Málaga</h4>
-<p>
-    ¿Buscas un centro para limpieza facial en Málaga de reconocido prestigio y buenos precios? Todo lo que buscas y
-    mucho más lo puedes encontrar en cualquiera de los dos centros. Pide ya tu cita por teléfono o online y no pierdas
-    esta gran oportunidad."
-</p>
+<tr>
+    <td bgcolor="#ffffff" align="left"
+        style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+        <p style="margin: 0; text-align: justify">
+        <p>
+            Es un tratamiento que exfolia la capa superficial de la piel, retirando las particulas
+            de suciedad y las células muertas que se van acumulando sobre ella. Elimina todas las impurezas, tanto de
+            origen
+            ambiental como las producidas por el propio organismo, quedando la piel mas limpia, luminosa y transparente.
+            Contribuye así a una correcta oxigenacion de la piel y favorece la renovacion celular, ademas lleva un
+            masaje
+            facial o corporal de quince minutos, ¿a quéesperas para reservar túcita?
+        </p>
+        <p>
+            Aún hay mas... todo este mes de Marzo tenéis un <strong>20% en toda la cosmetica Decleor</strong> ¡Te lo vas
+            a perder! Os
+            esperamos en nuestros centros In & Out de Calle Salitre 11 o Puerta de Buenaventura 4
+        </p>
+        </p>
