--- a/novedad.html
+++ b/novedad.html
@@ -1,10 +1,39 @@
+<h4>Imagina levantarte a diario con buena cara . Pues bien, ya es posible!</h4>
 <p>
-    INDIBA® Deep Beauty incrementa la temperatura interna del tejido favoreciendo de forma creciente la reducción de la
-    grasa, la remodelación corporal y la reafirmación de la piel, evitando la nueva formación de grasa en zonas de fácil
-    acúmulo. INDIBA® Deep Beauty convierte un tratamiento de belleza corporal en una experiencia saludable.
-    <br/><br/>
-    <strong>GLUTEOS - CARTUCHERAS - ESPALDAS</strong>
+    Como siempre, In and Out vuelve a ser pionero y en esta ocasión os traemos tratamiento facial que está
+    revolucionando el mercado de la belleza.
+    Este tratamiento ha surgido en Corea y su resultado es un efecto semi-permanente de las famosas <strong>BB Cream</strong>. Estamos
+    hablando de <strong>BB Glow</strong>, un método incomparable que permite que tengas una piel perfecta sin necesidad de maquillarte a
+    diario y que ya tenemos disponible en In and Out. Si quieres saber más sobre este tratamiento… ¡sigue leyendo!
+
+    El maquillaje nos ayuda a que, cada día, podamos unificar el tono de nuestra piel , cubrir impurezas y reducir las
+    manchas o las ojeras que podamos tener. Pero…<strong>¡el maquillaje se puede acabar!</strong>
+</p>
+<h4>¿Que beneficios tiene este tratamiento?</h4>
+<ul>
+    <li><strong>Difumina las manchas de la piel</strong>.</li>
+    <li><strong>Reduce las ojeras</strong> visiblemente.</li>
+    <li>Aminora la presencia de <strong>arrugas</strong>.</li>
+    <li>Aporta una <strong>mayor luminosidad</strong> al rostro creando el efecto “cara lavada”.</li>
+    <li>Ayuda a difuminarlas <strong>cicatrices</strong> de acné.</li>
+    <li><strong>Hidrata la piel</strong>.</li>
+    <li>Consigue un tono homogéneo de la piel consiguiendo un efecto progresivo semi-permanente.</li>
+</ul>
+<p>
+    Los resultados de este tratamiento de belleza se pueden ver de forma inmediata, aunque
+    <strong>se recomiendan un mínimo de 6 sesiones cada 15 días</strong>.
+    Gracias a BB Glow podras una piel perfecta sin necesidad de maquillaje.
+</p>
+<h4>¿En que consiste?</h4>
+<p>
+    “Se utiliza el microneedling (pequeñas agujas), una terapia no invasiva de inducción de colágeno con la que se
+    consigue que los productos penetren de una forma más efectiva en la piel. Se usan agujas indoloras de policarbonato
+    y se introduce un serum que combinada ácido hialurónico , péptidos,extractos de plantas naturales, nanoparticulas,
+    gold 24Ky vitaminana B 3 entre otras principios activos.Posteriormente aplicamos la ampolla de color dependiendo del
+    tipo de piel. Los resultados son inmediatos y tiene efecto de maquillaje semipermanente que dura hasta un año”.
 </p>
 <p>
-    <a target="_blank" href="https://www.indibadeepbeauty.com/tratamientos/">LEER MAS</a>
+    Puedes reservar tu cita en <a href="/es/citas">www.inandoutbelleza.es</a>.
 </p>
+
+
