timezone fix to fix

--- a/promo.html
+++ b/promo.html
@@ -1,14 +1,17 @@
 <p>
-    ¿Quién no queria tener un rostro mas suave, luminoso y fresco?
-</p><h4>
-    ¡Ven y prueba la “micro”!
-</h4><p>
-    Es un tratamiento que exfolia la capa superficial de la piel, retirando las particulas
-    de suciedad y las células muertas que se van acumulando sobre ella. Elimina todas las impurezas, tanto de origen
-    ambiental como las producidas por el propio organismo, quedando la piel mas limpia, luminosa y transparente.
-    Contribuye así a una correcta oxigenacion de la piel y favorece la renovacion celular, ademas lleva un masaje
-    facial o corporal de quince minutos, ¿a quéesperas para reservar túcita?
+    La piel se encuentra habitualmente expuesta a agentes agresivos.Durante el verano el sol, el cloro, la sal y los
+    rayos ultravioletas, y durante el invierno la contaminación, el frio, ect... pueden perjudicarnos.
 </p><p>
-    Aún hay mas... todo este mes de Marzo tenéis un <strong>20% en toda la cosmetica Decleor</strong> ¡Te lo vas a perder! Os
-    esperamos en nuestros centros In & Out de Calle Salitre 11 o Puerta de Buenaventura 4
+    Para evitar efectos secundarios como la deshidratación, las manchas, la irritación o las quemaduras debemos realizar
+    periódicamente reajustes de nuestra piel.Este tratamiento esta diseñado para este fin,el tratamiento C.V.S. de
+    Biologique Recherche Paris.
+</p><p>
+    Nuestra piel acumula células muertas que producen irregularidades en la capa cornea.Estas irregularidades
+    obstaculizan el reflejo de la luz y provocan la aparición de manchas.Con el tratamiento C.V.S.Lift realizamos una
+    exfoliación controlada, potenciando la regeneración celular y consiguiendo una piel homogenea.
+</p><p>
+    Sus maniobras de aplicación producen un efecto anti flacidez que tensa y tonifica el tejido facial consiguiendo una
+    piel suave y luminosa.
+</p><p>
+    <strong>Y tu ¿te lo vas a perder?</strong>
 </p>
