--- a/newsletter.html
+++ b/newsletter.html
@@ -1,8 +1,11 @@
 <p>
-    ¿Quién no queria tener un rostro mas suave, luminoso y fresco?
-</p><h4>
-    ¡Ven y prueba la “micro”!
-</h4>
+    La piel se encuentra habitualmente expuesta a agentes agresivos.Durante el verano el sol, el cloro, la sal y los
+    rayos ultravioletas, y durante el invierno la contaminación, el frio, ect... pueden perjudicarnos.
+</p><p>
+    Para evitar efectos secundarios como la deshidratación, las manchas, la irritación o las quemaduras debemos realizar
+    periódicamente reajustes de nuestra piel.Este tratamiento esta diseñado para este fin,el tratamiento C.V.S. de
+    Biologique Recherche Paris.
+</p>
 </p></td></tr>
 <!-- BULLETPROOF BUTTON -->
 <tr>
@@ -13,7 +16,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-89|TRT-9" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-91" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
@@ -32,17 +35,13 @@
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p style="margin: 0; text-align: justify">
         <p>
-            Es un tratamiento que exfolia la capa superficial de la piel, retirando las particulas
-            de suciedad y las células muertas que se van acumulando sobre ella. Elimina todas las impurezas, tanto de
-            origen
-            ambiental como las producidas por el propio organismo, quedando la piel mas limpia, luminosa y transparente.
-            Contribuye así a una correcta oxigenacion de la piel y favorece la renovacion celular, ademas lleva un
-            masaje
-            facial o corporal de quince minutos, ¿a quéesperas para reservar túcita?
-        </p>
-        <p>
-            Aún hay mas... todo este mes de Marzo tenéis un <strong>20% en toda la cosmetica Decleor</strong> ¡Te lo vas
-            a perder! Os
-            esperamos en nuestros centros In & Out de Calle Salitre 11 o Puerta de Buenaventura 4
-        </p>
+            Nuestra piel acumula células muertas que producen irregularidades en la capa cornea.Estas irregularidades
+            obstaculizan el reflejo de la luz y provocan la aparición de manchas.Con el tratamiento C.V.S.Lift realizamos una
+            exfoliación controlada, potenciando la regeneración celular y consiguiendo una piel homogenea.
+        </p><p>
+        Sus maniobras de aplicación producen un efecto anti flacidez que tensa y tonifica el tejido facial consiguiendo una
+        piel suave y luminosa.
+    </p><p>
+        <strong>Y tu ¿te lo vas a perder?</strong>
+    </p>
         </p>
