--- a/web-app-deploy/404.html
+++ b/web-app-deploy/404.html
@@ -24,7 +24,7 @@
     left: -150px;
     top: -60px;">
         <div class="logo" style="position: relative; background-repeat: no-repeat; margin: 3px; height: 50px; width: 160px; display: inline-block; background-size: contain; vertical-align: top;">        <div style="position: absolute; top: 5px; left: 60px; font-size: 34px;">in<span class="green-color">&amp;</span>out</div>        <div style="position: absolute; top: 36px; left: 60px; font-size: 13px;">centro de belleza</div>    </div>
-        <p>volvemos en 5 minutos</p>
+        <p>volvemos pronto</p>
     </div>
 
 </div>
