--- a/promo.html
+++ b/promo.html
@@ -1,17 +1,39 @@
+<h4>Imagina levantarte a diario con buena cara . Pues bien, ya es posible!</h4>
 <p>
-    La piel se encuentra habitualmente expuesta a agentes agresivos.Durante el verano el sol, el cloro, la sal y los
-    rayos ultravioletas, y durante el invierno la contaminación, el frio, ect... pueden perjudicarnos.
+    En esta ocasión os traemos tratamiento facial que está revolucionando el mercado de la belleza.
+    Este tratamiento ha surgido en Corea y su resultado es un efecto semi-permanente de las famosas BB Cream. Estamos
+    hablando de <strong>BB Glow</strong>,un método incomparable que permite que tengas una piel perfecta sin necesidad
+    de maquillarte a
+    diario.
 </p><p>
-    Para evitar efectos secundarios como la deshidratación, las manchas, la irritación o las quemaduras debemos realizar
-    periódicamente reajustes de nuestra piel.Este tratamiento esta diseñado para este fin,el tratamiento C.V.S. de
-    Biologique Recherche Paris.
+    El maquillaje nos ayuda a que, cada día, podamos unificar el tono de nuestra piel , cubrir impurezas y reducir las
+    manchas o las ojeras que podamos tener. Pero…<strong>¡el maquillaje se puede acabar!</strong>
+</p>
+<h4>¿Que beneficios tiene este tratamiento?</h4>
+<ul>
+    <li>Difumina las manchas de la piel.</li>
+    <li>Reduce las ojeras visiblemente.</li>
+    <li>Aminora la presencia de arrugas.</li>
+    <li>Aporta una mayor luminosidad al rostro creando el efecto “cara lavada”.</li>
+    <li>Ayuda a difuminarlas cicatrices de acné.</li>
+    <li>Hidrata la piel.</li>
+    <li>Consigue un tono homogéneo de la piel consiguiendo un efecto progresivo semi-permanente.</li>
+</ul>
+<p>
+    Los resultados de este tratamiento de belleza se <strong>pueden ver de forma inmediata, aunque se recomiendan un
+    mínimo de 6 sesiones cada 15 días</strong>.
 </p><p>
-    Nuestra piel acumula células muertas que producen irregularidades en la capa cornea.Estas irregularidades
-    obstaculizan el reflejo de la luz y provocan la aparición de manchas.Con el tratamiento C.V.S.Lift realizamos una
-    exfoliación controlada, potenciando la regeneración celular y consiguiendo una piel homogenea.
+    Gracias a BB Glow podras una piel perfecta sin necesidad de maquillaje.
+</p>
+<h4>¿En que consiste?</h4>
+<p>
+    “Se utiliza el microneedling (pequeñas agujas), una terapia no invasiva de inducción de colágeno con la que se
+    consigue que los productos penetren de una forma más efectiva en la piel. Se usan agujas indoloras de policarbonato
+    y se introduce un serum que combinada ácido hialurónico , péptidos,extractos de plantas naturales, nanoparticulas,
+    gold 24Ky vitaminana B 3 entre otras principios activos.Posteriormente aplicamos la ampolla de color dependiendo del
+    tipo de piel.
+    Los resultados son inmediatos y tiene efecto de maquillaje semipermanente que dura hasta un año despues de las 6
+    sesiones.
 </p><p>
-    Sus maniobras de aplicación producen un efecto anti flacidez que tensa y tonifica el tejido facial consiguiendo una
-    piel suave y luminosa.
-</p><p>
-    <strong>Y tu ¿te lo vas a perder?</strong>
+    Puedes reservar tu cita <a href="/es/citas" onclick="window.navigate(this, event)">AQUI</a>.
 </p>
