--- a/promo.html
+++ b/promo.html
@@ -1,39 +1,27 @@
-<h4>Imagina levantarte a diario con buena cara . Pues bien, ya es posible!</h4>
+<h4>¡Lo mejor para tener un pestañón!</h4>
 <p>
-    En esta ocasión os traemos tratamiento facial que está revolucionando el mercado de la belleza.
-    Este tratamiento ha surgido en Corea y su resultado es un efecto semi-permanente de las famosas BB Cream. Estamos
-    hablando de <strong>BB Glow</strong>,un método incomparable que permite que tengas una piel perfecta sin necesidad
-    de maquillarte a
-    diario.
-</p><p>
-    El maquillaje nos ayuda a que, cada día, podamos unificar el tono de nuestra piel , cubrir impurezas y reducir las
-    manchas o las ojeras que podamos tener. Pero…<strong>¡el maquillaje se puede acabar!</strong>
+    <strong>¿Quieres conseguir un efecto "push up" en las pestañas?</strong>
 </p>
-<h4>¿Que beneficios tiene este tratamiento?</h4>
+<p>Viene el verano y normalmentenos gusta olvidarnos de la máscara de pestañas para disfrutar de la playa y la piscina
+    sin preocuparnos de que se nos corra el maquillaje.</p>
+<p>Ha conquistado a las mujeres de todo el mundo y este mes estará en promoción en nuestros centros In and Out. Es
+    unas de las alternativas más novedosas en el mercado; alarga, alisa y da volumen a las pestañas, las curva
+    resaltando la expresión de la mirada, ya que es un tratamiento suave que no daña las nuestras, al contrario,
+    refuerza su crecimiento y las nutre, se consiguen gracias a unas almohadillas de silicona que se ajustan al parpado.
+</p>
+<p>
+    Los resultados:
 <ul>
-    <li>Difumina las manchas de la piel.</li>
-    <li>Reduce las ojeras visiblemente.</li>
-    <li>Aminora la presencia de arrugas.</li>
-    <li>Aporta una mayor luminosidad al rostro creando el efecto “cara lavada”.</li>
-    <li>Ayuda a difuminarlas cicatrices de acné.</li>
-    <li>Hidrata la piel.</li>
-    <li>Consigue un tono homogéneo de la piel consiguiendo un efecto progresivo semi-permanente.</li>
+    <li>Inmediatos y puede durar hasta dos meses.</li>
+    <li>Efecto de mayor longitud y espesor. Además al aplicar el tinte proporciona intensidad y profundidad a la
+        mirada.
+    </li>
 </ul>
-<p>
-    Los resultados de este tratamiento de belleza se <strong>pueden ver de forma inmediata, aunque se recomiendan un
-    mínimo de 6 sesiones cada 15 días</strong>.
-</p><p>
-    Gracias a BB Glow podras una piel perfecta sin necesidad de maquillaje.
 </p>
-<h4>¿En que consiste?</h4>
 <p>
-    “Se utiliza el microneedling (pequeñas agujas), una terapia no invasiva de inducción de colágeno con la que se
-    consigue que los productos penetren de una forma más efectiva en la piel. Se usan agujas indoloras de policarbonato
-    y se introduce un serum que combinada ácido hialurónico , péptidos,extractos de plantas naturales, nanoparticulas,
-    gold 24Ky vitaminana B 3 entre otras principios activos.Posteriormente aplicamos la ampolla de color dependiendo del
-    tipo de piel.
-    Los resultados son inmediatos y tiene efecto de maquillaje semipermanente que dura hasta un año despues de las 6
-    sesiones.
-</p><p>
-    Puedes reservar tu cita <a href="/es/citas" onclick="window.navigate(this, event)">AQUI</a>.
+    ¿Te lo vas a perder? Pues disfrutar de esta promoción durante todo el mes al precio del tratamiento del Lifting
+    además del tinte por sólo 40€.
+</p>
+<p>
+    ¡Os esperamos!
 </p>
