--- a/newsletter.html
+++ b/newsletter.html
@@ -1,11 +1,9 @@
-<p>
-    La piel se encuentra habitualmente expuesta a agentes agresivos.Durante el verano el sol, el cloro, la sal y los
-    rayos ultravioletas, y durante el invierno la contaminación, el frio, ect... pueden perjudicarnos.
-</p><p>
-    Para evitar efectos secundarios como la deshidratación, las manchas, la irritación o las quemaduras debemos realizar
-    periódicamente reajustes de nuestra piel.Este tratamiento esta diseñado para este fin,el tratamiento C.V.S. de
-    Biologique Recherche Paris.
-</p>
+<h4>¡Lo mejor para tener un pestañón!</h4>
+    <p>
+        <strong>¿Quieres conseguir un efecto "push up" en las pestañas?</strong>
+    </p>
+    <p>Viene el verano y normalmentenos gusta olvidarnos de la máscara de pestañas para disfrutar de la playa y la piscina
+        sin preocuparnos de que se nos corra el maquillaje.</p>
 </p></td></tr>
 <!-- BULLETPROOF BUTTON -->
 <tr>
@@ -16,7 +14,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-91" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-80|TRT-59" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
@@ -33,15 +31,24 @@
 <tr>
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-        <p style="margin: 0; text-align: justify">
+        <p>Ha conquistado a las mujeres de todo el mundo y este mes estará en promoción en nuestros centros In and Out. Es
+            unas de las alternativas más novedosas en el mercado; alarga, alisa y da volumen a las pestañas, las curva
+            resaltando la expresión de la mirada, ya que es un tratamiento suave que no daña las nuestras, al contrario,
+            refuerza su crecimiento y las nutre, se consiguen gracias a unas almohadillas de silicona que se ajustan al parpado.
+        </p>
         <p>
-            Nuestra piel acumula células muertas que producen irregularidades en la capa cornea.Estas irregularidades
-            obstaculizan el reflejo de la luz y provocan la aparición de manchas.Con el tratamiento C.V.S.Lift realizamos una
-            exfoliación controlada, potenciando la regeneración celular y consiguiendo una piel homogenea.
-        </p><p>
-        Sus maniobras de aplicación producen un efecto anti flacidez que tensa y tonifica el tejido facial consiguiendo una
-        piel suave y luminosa.
-    </p><p>
-        <strong>Y tu ¿te lo vas a perder?</strong>
-    </p>
+            Los resultados:
+        <ul>
+            <li>Inmediatos y puede durar hasta dos meses.</li>
+            <li>Efecto de mayor longitud y espesor. Además al aplicar el tinte proporciona intensidad y profundidad a la
+                mirada.
+            </li>
+        </ul>
+        </p>
+        <p>
+            ¿Te lo vas a perder? Pues disfrutar de esta promoción durante todo el mes al precio del tratamiento del Lifting
+            además del tinte por sólo 40€.
+        </p>
+        <p>
+            ¡Te esperamos!
         </p>
