--- a/promo.html
+++ b/promo.html
@@ -1,27 +1,25 @@
-<h4>¡Lo mejor para tener un pestañón!</h4>
 <p>
-    <strong>¿Quieres conseguir un efecto "push up" en las pestañas?</strong>
-</p>
-<p>Viene el verano y normalmentenos gusta olvidarnos de la máscara de pestañas para disfrutar de la playa y la piscina
-    sin preocuparnos de que se nos corra el maquillaje.</p>
-<p>Ha conquistado a las mujeres de todo el mundo y este mes estará en promoción en nuestros centros In and Out. Es
-    unas de las alternativas más novedosas en el mercado; alarga, alisa y da volumen a las pestañas, las curva
-    resaltando la expresión de la mirada, ya que es un tratamiento suave que no daña las nuestras, al contrario,
-    refuerza su crecimiento y las nutre, se consiguen gracias a unas almohadillas de silicona que se ajustan al parpado.
-</p>
-<p>
-    Los resultados:
-<ul>
-    <li>Inmediatos y puede durar hasta dos meses.</li>
-    <li>Efecto de mayor longitud y espesor. Además al aplicar el tinte proporciona intensidad y profundidad a la
-        mirada.
-    </li>
-</ul>
-</p>
-<p>
-    ¿Te lo vas a perder? Pues disfrutar de esta promoción durante todo el mes al precio del tratamiento del Lifting
-    además del tinte por sólo 40€.
-</p>
-<p>
-    ¡Os esperamos!
+    En estos días previos a las vacaciones de verano, puede que estéis buscando un tratamiento efectivo, no invasivo,
+    que mejore el aspecto de vuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os aseguramos que es posible.
+    <strong>Indiba</strong>, modalidad de radiofrecuencia capaz de hacer por vuestro rostro todo esto. Un método increíble para la piel
+    capaz de mejorar la flacidez, hidratación... ¡Resulta casi mágico!
+</p><h4>
+    *Un cambio desde la primera sesión:
+</h4><p>
+<strong>Indiba</strong> os devolverá, un aspecto sereno, joven,firme y dulce. Un efecto que marca la diferencia en vuestra cara
+    después de pasar por él. Una sola sesión es suficiente para obtener un resultado real y palpable.
+    Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el rostro, cuello y regenera el
+    colágeno y elastina, y que cuantas más sesiones disfrutéis más beneficios obtendréis, también es cierto que
+    desde la primera sesión el aspecto de la piel mejora de manera radical.
+</p><h4>
+*¿Qué es?:
+</h4><p>
+    Es un tratamiento,no invasivo e indoloro, que produce una diatermia localizada en nuestro cuerpo. De efectos solo
+    beneficiosos, totalmente inocuo. Se trata de un calentamiento local de tejidos en una zona del cuerpo bajo la
+    influencia de un campo eléctrico o magnético. Este aumento de temperatura controlado se produce por la
+    circulación de una corriente de alta frecuencia, que provoca un aumento de la temperatura desde el interior de las
+    propias células. La intensidad del calor depende de la zona y problema estético a tratar. La sensación que
+    produce es relajante y agradable. ¿Te lo vas a perder?
+</p><p>
+    Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial o corporal. ¡Os esperamos!
 </p>
