--- a/src/apps/login/logged/appointment.html
+++ b/src/apps/login/logged/appointment.html
@@ -1,9 +1,15 @@
-<li style="margin: 10px;">
-    {{item.summary}}<br/>
-    {{date}}
-    <em>{{startTime}} - {{endTime}}</em>
-    <br/>
-    {{item.location}}<br/>
-    <input type="button" class="button green-bg-color white-color clickable" value="{{logged.deleteBooking}}"
+<div>
+    <ul>
+        <li style="margin: 10px;">
+            {{item.summary}}<br/>
+            {{date}}
+            <em>{{startTime}} - {{endTime}}</em>
+            <br/>
+            {{item.location}}
+        </li>
+    </ul>
+    <input style="min-width: 125px" type="button" class="button green-bg-color white-color clickable" value="{{logged.addToGoogle}}"
+           onclick="this.form.addToGoogle('{{item.eventId}}', '{{item.calendarId}}')" />
+    <input  style="min-width: 125px" type="button" class="button green-bg-color white-color clickable" value="{{logged.deleteBooking}}"
            onclick="this.form.deleteBooking('{{item.eventId}}', '{{item.calendarId}}')" />
-</li>
+</div>
