--- a/src/apps/login/logged/logged.html
+++ b/src/apps/login/logged/logged.html
@@ -5,7 +5,7 @@
     <!--</div>-->
     <div class="box">
         {{logged.bookTitle}}
-        <ul #appointments></ul>
+        <div #appointments></div>
     </div>
     <div class="box">
         <div>
