II trimestral cash - bill numbers

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,9 +1,6 @@
-    <p>
-        En estos días previos a las vacaciones de verano, puede que estéis buscando un tratamiento efectivo, no invasivo,
-        que mejore el aspecto de vuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os aseguramos que es posible.
-        <strong>Indiba</strong>, modalidad de radiofrecuencia capaz de hacer por vuestro rostro todo esto. Un método increíble para la piel
-        capaz de mejorar la flacidez, hidratación... ¡Resulta casi mágico!
-    </p>
+<p>
+    El tratamiento mas “cool “ para este verano esta en nuestros centros In & Out... te lo contamos a continuación...
+</p>
 </p></td></tr>
 <!-- BULLETPROOF BUTTON -->
 <tr>
@@ -14,22 +11,11 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-4" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA RADIOFRECUENCIA FACIAL
-                                </a>
-                            </td>
-                        </tr>
-                        <tr><td>&nbsp;</td></tr>
-                        <tr>
-                            <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-88" target="_blank"
-                                   style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
-                                    text-decoration: none; text-decoration: none; padding: 15px 25px;
-                                    border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA RADIOFRECUENCIA CORPORAL
+                                    COMPRA
                                 </a>
                             </td>
                         </tr>
@@ -42,25 +28,32 @@
 <tr>
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-        <p>*Un cambio desde la primera sesión:</p>
         <p>
-            <strong>Indiba</strong> os devolverá, un aspecto sereno, joven,firme y dulce. Un efecto que marca la diferencia en vuestra cara
-            después de pasar por él. Una sola sesión es suficiente para obtener un resultado real y palpable.
-            Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el rostro, cuello y regenera el
-            colágeno y elastina, y que cuantas más sesiones disfrutéis más beneficios obtendréis, también es cierto que
-            desde la primera sesión el aspecto de la piel mejora de manera radical.
-        </p>
+            Seguramente recuerdes que el año pasado lanzábamos en octubre una promoción de lanzamiento de uno de los
+            tratamientos más famosos de toda la gama, esta vez, volvemos de nuevo a disfrutar del mismo tratamiento. Es decir,
+            durante todo el mes de agosto, podrás disfrutar de tu tratamiento Oxigenante Vip 02 por tan sólo 50€. Además,
+            recuerda que puedes comprar una tarjeta de regalo con esta promoción y regalar a alguien muy especial, belleza,
+            relax, pero sobre todo salud, ya que Biologyque Recherche es una firma de cosmética de gran calidad.
+        </p><p>
+        ¿Estamos ante una revolución en el sector de la cosmética? Estamos seguras de que sí, sólo necesitas probar el
+        tratamiento Oxigenante Vip 02 para darte cuenta de sus grandes beneficios.
+    </p><p>
+        ¿Qué aporta el tratamiento Oxigenante Vip 02? Seguramente, si sigues a famosas influencer de la moda y la cosmética
+        habrás leído sobre este tratamiento, que es ya un “fondo de armario” de cualquier celebrity. Te recopilamos
+        rápidamente todo lo que puede hacer por ti:
+    </p>
+        <ul>
+            <li>Eliminar toxinas de la piel.</li>
+            <li>Propiedades calmantes.</li>
+            <li>Oxigena nuestra piel mejorando el trabajo de nuestras células.</li>
+            <li>Nutre e hidratar.</li>
+        </ul>
         <p>
-            *¿Qué es?:
-        </p>
-        <p>
-            Es un tratamiento,no invasivo e indoloro, que produce una diatermia localizada en nuestro cuerpo. De efectos solo
-            beneficiosos, totalmente inocuo. Se trata de un calentamiento local de tejidos en una zona del cuerpo bajo la
-            influencia de un campo eléctrico o magnético. Este aumento de temperatura controlado se produce por la
-            circulación de una corriente de alta frecuencia, que provoca un aumento de la temperatura desde el interior de las
-            propias células. La intensidad del calor depende de la zona y problema estético a tratar. La sensación que
-            produce es relajante y agradable. ¿Te lo vas a perder?
-        </p>
-        <p>
-            Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial o corporal. ¡Os esperamos!
-        </p>
+            Para terminar con las grandes ventajas del tratamiento Oxigenante VIP 02 es que es válido para todo tipo de pieles y
+            que además ayuda a cerrar los poros de nuestra piel, para un aspecto mucho más bonito y cuidado.
+        </p><p>
+        ¿Te lo vas a perder? Consulta cualquiera de nuestros centros ubicados en Málaga capital donde nuestras expertas en
+        belleza y cosmética podrán asesorarte en cuanto a tus necesidades específicas.
+    </p><p>
+        Recuerda, sólo durante el mes de agosto, el famoso tratamiento Oxigenante Vip 02 en nuestros centros.
+    </p>
