--- a/src/apps/reviews/review.html
+++ b/src/apps/reviews/review.html
@@ -1,7 +1,11 @@
 <div class="box">
-    <h3>{{item.name}}</h3>
+    <h3 style="text-transform: capitalize;">
+        {{item.name}}
+    </h3>
     <div>
         Valoracíon: {{stars}}
+        <br/>
+        <span style="font-size: 11px;font-style: italic;">{{item.created}}</span>
     </div>
     <br/>
     <div style="text-align: justify;"><em>{{item.description}}</em></div>
