--- a/src/apps/login/logged/logged.html
+++ b/src/apps/login/logged/logged.html
@@ -16,6 +16,13 @@
             <ul #noqrcode></ul>
         </div>
     </div>
+    <div class="box">
+        <label class="switch" style="margin-right: 4px;line-height: 34px;">
+            <input #newsletter type="checkbox" {{hasNewsletter}} onchange="this.form.newsletter()" />
+            <span class="slider"></span>
+        </label>
+        <span style="padding-left: 5px;">Quiero recibir e-mails promocionales</span>
+    </div>
     <!--<div class="box">-->
         <!--MIS PEDIDOS:-->
         <!--<div #orders></div>-->
