--- a/newsletter.html
+++ b/newsletter.html
@@ -1,12 +1,14 @@
 <p>
-    Como todos los inicios de mes, en In&Out estrenamos nuestra promocion mensual, y en octubre tenemos una sorpresa
-    para todas y todos nuestros clientes, ya que es una promocion doble: Microdermoabrasion con punta de diamante +
-    manicura semipermanente. Este mes, podras disfrutar de este pack indivisible por solo 40€, eso si el pack es para
-    utilizar en el mismo dia, es una excusa perfecta para desconectar de la rutina, llamar a nuestros centros, reservar
-    tu cita y disfrutar de una manana o de una tarde diferente gracias a la promocion de octubre que te cuida y realza
-    toda la belleza que hay en ti.
+    Disfruta de nuestra promo <strong>¨Beauty Mom¨</strong> para que Mama se siga cuidando y poniendose guapa en casa.
+</p><p>
+    Ahora que todas
+    tenemos mas tiempo, estamos dedicándonos un poquito mas a cuidar nuestra piel y nos sentimos mejor usando nuestros
+    productos favoritos, por eso desde In and Out hemos hecho una selección de productos con un <strong>15 % de
+    descuento</strong>. Solo
+    tienes que añadirlos al carrito y ponernos la dirección y el nombre de la persona a la que se lo queréis
+    regalar.¡También puede ser un auto regalo!
 </p>
-</p></td></tr>
+</td></tr>
 <!-- BULLETPROOF BUTTON -->
 <tr>
     <td bgcolor="#ffffff" align="left">
@@ -16,11 +18,11 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-10" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/productos" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA
+                                    COMPRA PRODUCTOS ONLINE
                                 </a>
                             </td>
                         </tr>
@@ -31,32 +33,21 @@
     </td>
 </tr>
 <tr>
-    <td bgcolor="#ffffff" align="left"
-        style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+    <td>
+        <img style="width: 100%;"
+             src="https://www.inandoutbelleza.es/google/drive/promociones/desktop.2020-mayo-beauty-mom-descuentos-para-mama.jpg"/>
+    </td>
+</tr>
+<tr>
+    <td>
         <p>
-            No te pierdas la Microdermoabrasion con punta de diamante: Si te beneficiaste de nuestra promocion del mes pasado
-            que mejor que complementar tu rutina facial con esta promocion. Muchas personas asocian el nombre a un tratamiento
-            doloroso, y nada mas lejos de la realidad es completamente indoloro, es mas durante el proceso puedes gozar de un
-            rato de relax y desconexion. ¡¡No has venido a la gran manzana a sufrir!! ¡¡Claro que no!! Este tratamiento esta
-            indicado para personas que buscan disminuir lineas de expresion, arrugas o danos causados por el sol, ademas de
-            reducir las cicatrices que el acne ha producido. Por ultimo uno de los mayores beneficios del tratamiento de la
-            microdermoabrasion con punta de diamante es que ayuda a aumentar y activar la circulacion de los capilares
-            sanguineos de nuestro rostro. ¿De verdad te vas a perder este tratamiento maravilloso justo el mes que ademas tiene
-            descuento?
+            O sorprendela con una tarjeta regalo para usarla cuando todo esto pase y disfrute haciéndose un masaje ….o
+            cualquiera de nuestros famosos tratamientos.
         </p><p>
-        Ademas de esto, podemos presumir de tener al mejor equipo de manicuristas de Malaga, y no basta solo con decirlo,
-        hay que demostrarlo, y por eso hemos decidido que la promocion de octubre sea doble, ademas de la Microdermoabrasion
-        con punta de diamante, esa misma tarde o manana disfruta de una manicura profesional. Es hora de elegir el tono que
-        mas te gusta y que mas se adapta a tu estado de animo y disfruta de la calidad de una manicura profesional de la
-        mano de nuestras asesoras de belleza.
+        Elije tus productos mételos en el carrito y regálaselos a mama.
     </p><p>
-        Recuerda que puedes pedir cita para esta promocion y cualquier otro tratamiento, en nuestro telefono o a traves de
-        nuestra web: <a href="https://www.inandoutbelleza.es/es/citas" style="color: #56ab2a;">PIDE CITA ONLINE</a>
+        Corre que vuelan, esta oferta esta disponible hasta agotar existencias.
+        Todas nuestras cajas de belleza llevan un regalo extra para mama.
     </p>
-<p>
-    <strong>
-        Si no quieres más recibir promociones entra en tu
-        <a href="https://www.inandoutbelleza.es/es/cuenta" style="color: #56ab2a;">cuenta</a>
-        y elimina la subscripción
-    </strong>
-</p>
+    </td>
+</tr>
