--- a/src/apps/promotions/promotion.html
+++ b/src/apps/promotions/promotion.html
@@ -7,9 +7,10 @@
             width="96" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     <br/>
     <div class="green-color">{{item.hashtags}}</div>
+    {{itemToSell}}
     <br/>
     {{bonusBuy}}
-    <img src="/google/drive/promociones/{{system.deviceType}}.{{item.foto}}"
+    <img src="{{itemPhoto}}"
          alt="{{item.titulo}}" title="{{item.titulo}}" />
     <br/>
     <div style="text-align: justify;">
