--- a/src/apps/treatments/treatment.html
+++ b/src/apps/treatments/treatment.html
@@ -9,7 +9,7 @@
     {{newItem}}
     <div style="font-size: 12px;margin: 10px;text-align: justify;">{{item.descripcion}}</div>
     <span style="text-decoration: {{item.textDecoration}};">{{item.price}}</span>
-    <span style="color: #daa520;display: {{item.showDiscount}}">{{item.discounted}}</span>
+    <span style="color: #E91E63;display: {{item.showDiscount}}">{{item.discounted}}</span>
     <br/>
     <input onclick="this.form.add('{{item.identificador}}');"
             style="position: absolute;right: 9px;bottom: 5px; display:{{addToCartDisplay}};"
